# windsurfPlayer

./: .clangd  .gitignore  Application.cpp  Application.h  AudioOutput.cpp  AudioOutput.h  AudioVisualizer.cpp  AudioVisualizer.h  CMakeLists.txt  CMakePresets.json  FrameQueue.h  LEARNING.md  MainWindow.cpp  MainWindow.h  MediaDatabase.cpp  MediaDatabase.h  MediaDecoder.cpp  MediaDecoder.h  MediaInfo.h  MediaStudio.sln  MediaStudio.vcxproj  MediaStudio.vcxproj.filters  MediaTranscoder.cpp  MediaTranscoder.h  PacketQueue.cpp  PacketQueue.h  PlayerController.cpp  PlayerController.h  README.md  SUMMARY.md  VideoRenderer.cpp  VideoRenderer.h  VideoWidget.cpp  VideoWidget.h  glad.c  main.cpp
docs/: LEARNING.md  SUMMARY.md  USAGE.md
sql/: init_database.sql
src/: AudioOutput.cpp  AudioVisualizer.cpp  AudioVisualizer.h  PacketQueue.h  VideoRenderer.cpp  main.cpp
tools/: build-mingw.ps1  configure-mingw.ps1  run-mingw.ps1
